# yt-dlp-gui

./: CMakeLists.txt  LICENSE  README.md  appicon.rc  main.cpp
ui/: index.html  script.js  style.css
